--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h1>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SCREENSHOTS</h1>
 
-<p><img src="https://github.com/MrClan/wordsuggester/blob/master/Screenshots/Screenshot_2016-07-25-22-00-30.png" alt="sc1"><img src="https://github.com/MrClan/wordsuggester/blob/master/Screenshots/Screenshot_2016-07-25-22-15-54.png" alt="sc2"><img src="https://github.com/MrClan/wordsuggester/blob/master/Screenshots/Screenshot_2016-07-25-22-17-03.png" alt="sc3"></p>
+<p><img src="https://raw.githubusercontent.com/MrClan/wordsuggester/master/Screenshots/Screenshot_2016-07-25-22-00-30.png" alt="sc1"><img src="https://raw.githubusercontent.com/MrClan/wordsuggester/master/Screenshots/Screenshot_2016-07-25-22-15-54.png" alt="sc2"><img src="https://raw.githubusercontent.com/MrClan/wordsuggester/master/Screenshots/Screenshot_2016-07-25-22-17-03.png" alt="sc3"></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/MrClan/wordsuggester">Wordsuggester</a> is maintained by <a href="https://github.com/MrClan">MrClan</a>.</span>
