--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <a id="word-suggester" class="anchor" href="#word-suggester" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Word Suggester</h1>
 
 <p>a simple word suggester to assist in word games</p>
+<p>built with <a href='https://www.fusetools.com'>FuseTools</p>
+
 
 <p>WordSuggester is an application that looks up words in the dictionary and returns specific words that matches conditions like word-length or letter matches.</p>
 
@@ -42,7 +44,7 @@
 <h1>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SCREENSHOTS</h1>
 
-<p><img src="https://raw.githubusercontent.com/MrClan/wordsuggester/master/Screenshots/Screenshot_2016-07-25-22-00-30.png" alt="sc1"><img src="https://raw.githubusercontent.com/MrClan/wordsuggester/master/Screenshots/Screenshot_2016-07-25-22-15-54.png" alt="sc2"><img src="https://raw.githubusercontent.com/MrClan/wordsuggester/master/Screenshots/Screenshot_2016-07-25-22-17-03.png" alt="sc3"></p>
+<p><img src="https://raw.githubusercontent.com/MrClan/wordsuggester/master/Screenshots/Screenshot_2016-07-25-22-00-30.png" alt="sc1"  style="width:250px;margin:4px;"><img src="https://raw.githubusercontent.com/MrClan/wordsuggester/master/Screenshots/Screenshot_2016-07-25-22-15-54.png" alt="sc2"  style="width:250px;margin:4px;"><img src="https://raw.githubusercontent.com/MrClan/wordsuggester/master/Screenshots/Screenshot_2016-07-25-22-17-03.png" alt="sc3"  style="width:250px;margin:4px;"></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/MrClan/wordsuggester">Wordsuggester</a> is maintained by <a href="https://github.com/MrClan">MrClan</a>.</span>
