--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Wordsuggester</h1>
       <h2 class="project-tagline">A simple word suggester to assist in word games</h2>
+      <h4 class="project-tagline">built with <a href="https://www.fusetools.com" class="btn">FuseTools</a></h4>
       <a href="https://github.com/MrClan/wordsuggester" class="btn">View on GitHub</a>
       <a href="https://github.com/MrClan/wordsuggester/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/MrClan/wordsuggester/tarball/master" class="btn">Download .tar.gz</a>
@@ -22,8 +23,8 @@
       <h1>
 <a id="word-suggester" class="anchor" href="#word-suggester" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Word Suggester</h1>
 
-<p>a simple word suggester to assist in word games</p>
-<p>built with <a href='https://www.fusetools.com'>FuseTools</p>
+<p>A simple word suggester to assist in word games</p>
+
 
 
 <p>WordSuggester is an application that looks up words in the dictionary and returns specific words that matches conditions like word-length or letter matches.</p>
