--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <section class="page-header">
       <h1 class="project-name">Wordsuggester</h1>
       <h2 class="project-tagline">A simple word suggester to assist in word games</h2>
-      <h4 class="project-tagline">built with <a href="https://www.fusetools.com" class="btn">FuseTools</a></h4>
+      <h4 class="project-tagline">Built with FuseTools</h4>
       <a href="https://github.com/MrClan/wordsuggester" class="btn">View on GitHub</a>
       <a href="https://github.com/MrClan/wordsuggester/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/MrClan/wordsuggester/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/MrClan/wordsuggester/releases/download/v1.0.0.1/wordfinderfuse.apk" class="btn">Download APK(v 1.0.0.1)</a>
     </section>
 
     <section class="main-content">
