--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h4 class="project-tagline">Built with FuseTools</h4>
       <a href="https://github.com/MrClan/wordsuggester" class="btn">View on GitHub</a>
       <a href="https://github.com/MrClan/wordsuggester/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/MrClan/wordsuggester/releases/download/v1.0.0.1/wordfinderfuse.apk" class="btn">Download APK(v 1.0.0.1)</a>
+      <a href="https://github.com/MrClan/wordsuggester/releases/download/v1.0.0.1/wordfinderfuse.apk" class="btn">Download APK(v 1.0.0.1) [8 MB]</a>
     </section>
 
     <section class="main-content">
